@@ -24,8 +24,6 @@ local AceGUI = LibStub("AceGUI-3.0")
 
 ]]
 
-local WotLK = select(4, GetBuildInfo()) >= 30000
-
 --------------------------
 -- Tab Group            --
 --------------------------
@@ -57,12 +55,7 @@ do
 	
 	local function Tab_SetText(self, text)
 		self:_SetText(text)
-		-- TODO: Remove when 3.0 hits live
-		if WotLK then
-			PanelTemplates_TabResize(self, 0)
-		else
-			PanelTemplates_TabResize(0, self)
-		end
+		PanelTemplates_TabResize(self, 0)
 	end
 	
 	local function UpdateTabLook(self)
@@ -245,13 +238,8 @@ do
 			--equal padding for each tab to fill the available width
 			local padding = (width - rowwidths[row]) / (endtab - starttab+1)
 			for i = starttab, endtab do
-				-- TODO: Remove when 3.0 hits live
-				if WotLK then
-					PanelTemplates_TabResize(tabs[i], padding)
-				else
-					PanelTemplates_TabResize(padding, tabs[i])
-				end
-			end	
+				PanelTemplates_TabResize(tabs[i], padding)
+			end
 			starttab = endtab + 1
 		end
 		
